--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                             <img src="img/shape/shape_3.svg" alt="">
                         </div>
                         <div class="thumb_inner  wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                            <img src="img/about/about.jpeg" alt="">
+                            <img src="img/performer/WhatsApp Image 2025-03-08 at 1.46.26 AM (7).jpeg" alt="">
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/1.png" alt="">
+                                    <img src="img/performer/WhatsApp Image 2025-03-08 at 1.46.26 AM (2).jpeg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Live Performance</h4>
@@ -227,7 +227,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/2.png" alt="">
+                                    <img src="img/performer/WhatsApp Image 2025-03-08 at 1.46.26 AM (4).jpeg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>DJ</h4>
@@ -237,7 +237,7 @@
                         <div class="col-lg-4 col-md-4">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/3.png" alt="">
+                                    <img src="img/performer/WhatsApp Image 2025-03-08 at 1.46.26 AM (6).jpeg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Karaoke</h4>
