--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
+                                            <li><a href="performer.html">Gallery</a></li>
                                             <li><a href="performer.html">Our Amenities</a></li>
-                                            <li><a href="performer.html">Entertainment</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
